package concurrent_asyncs;

public abstract class AbstractFetcher<T> {
    public abstract T fetch();
}
