package history;

public interface ScoreSummary {
	String summary();
}
